samples/_failures_safe/1761448406_00ba97_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a498498.c: In function ‘main’:
./samples/SAFE/__tmp_1a498498.c:168:5: error: expected expression at end of input
  168 |     int token_count = tokenize(input, tokens,
      |     ^~~
./samples/SAFE/__tmp_1a498498.c:168:5: error: expected declaration or statement at end of input
